# ecommerce_forecasting_competition

./: .gitignore  README.md  pyproject.toml
assets/: preprocessor.pkl
notebooks/: eda.ipynb  modelling_trails.ipynb  modelling_trails_dl.ipynb  modelling_trails_ml.ipynb  training.ipynb
src/: feature_pipeline.py
src/utils/: data_ingestion.py  data_preprocessing.py
